[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/melee/melee_spriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Idle_gun/Idle_gun_000.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 33.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.33625, 0.33625 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:vframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "melee_hit"
length = 0.33
step = 0.047
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.094 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "melee_do_damage"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.047, 0.094, 0.141, 0.188, 0.235, 0.282, 0.329 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "melee_miss"
length = 0.33
step = 0.047
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.047, 0.094, 0.141, 0.188, 0.235, 0.282, 0.329 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.329 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 84.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 80 )

[sub_resource type="AnimationNodeStateMachine" id=10]

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 0 )
rotation = -1.5708
scale = Vector2( 0.33625, 0.33625 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="RoomDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/melee_hit = SubResource( 8 )
anims/melee_miss = SubResource( 7 )
anims/take_damage = SubResource( 4 )

[node name="HealTimer" type="Timer" parent="."]

[node name="InteractDetector" type="Area2D" parent="."]
z_index = 10
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractDetector"]
position = Vector2( 12, 1 )
shape = SubResource( 5 )

[node name="SwitchWeaponTimer" type="Timer" parent="."]

[node name="MeleeDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeDetector"]
position = Vector2( 64, 0 )
shape = SubResource( 6 )

[node name="MeleeTimer" type="Timer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 11 )

[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
[connection signal="area_exited" from="RoomDetector" to="." method="_on_RoomDetector_area_exited"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="body_entered" from="InteractDetector" to="." method="_on_InteractDetector_body_entered"]
[connection signal="body_exited" from="InteractDetector" to="." method="_on_InteractDetector_body_exited"]
[connection signal="timeout" from="SwitchWeaponTimer" to="." method="_on_SwitchWeaponTimer_timeout"]
[connection signal="body_entered" from="MeleeDetector" to="." method="_on_MeleeDetector_body_entered"]
[connection signal="body_exited" from="MeleeDetector" to="." method="_on_MeleeDetector_body_exited"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_Timer_timeout"]
